src/Adyma/MainBundle/Resources/public/css/main.css
/* ... */
.slidemgin{
    right:0;
}
.slidemg h4{
    border-bottom:1px solid #2e2e2e;
    padding:2px 0;
    width:120px;
    margin-left:20px;
}
.slidemgin h4{
    border-bottom:1px solid #2e2e2e;
    padding:2px 0;
    width:120px;
    margin-left:20px;
}
.slidemg p{
    text-align:left;
    margin-left:20px;
    margin-top:5%;
    color:#2e2e2e;
    font-size:12px;
    padding-right:10px;
}
.slidemgin p{
    text-align:left;
    margin-left:20px;
    margin-top:5%;
    color:#2e2e2e;
    font-size:12px;
    padding-right:10px;
}
.slidemg a{
    text-decoration:none;
    font-weight:bold;
    color:#2e2e2e;
}
.slidemgin a{
    text-decoration:none;
    font-weight:bold;
    color:#2e2e2e;
}
.logocontent{
    display:inline-block;
    width:180px;
    height:120px;
    vertical-align: top;
    margin-left:3%;
    margin-right:3%;
}
/*Secciones Interiores*/
.headcontent{
    width: 100%;
    height: 393px;
    z-index: -1;
    position: absolute;
    top: 0px;
    overflow: hidden;
}
.headcontent img{
    width: 100%;
    position: absolute;
    top:0px;
}
.headcontent h3{
    color: white;
    font-family: 'Montserrat';
    font-size: 48px;
    text-transform: uppercase;
    text-align: center;
    position: absolute;
    top: 113px;
    left: 0;
    right: 0;
}
.headcontent p{
    color: white;
    font-family: sans-serif;
    text-align: center;
    font-size: 14px;
    position: absolute;
    top: 215px;
    left: 0;
    right: 0;
}
.undercontent{
    margin-top: 29%;
    padding-top: 7%;
    background: white;
}
.undercontent img{
    margin-top: 1.5%;
    margin-left: 6%;
    float: left;
}
.undercontent p{
    margin-left: 5%;
    font-size: 13px;
    padding-bottom: 20px;
    padding-right: 28px;
}
.pright{
    background: #bfbfbf;
    display:inline-block;
    margin-left: 2%;
    width: 42%;
}
.pright p{
    margin-top: -15px;
    font-size: 14px;
    font-weight: bold;
}
.pright h4{
    font-family: 'Montserrat';
    color: white;
    font-size: 21px;
    margin-left: 5%;
}
.pleft{
    display:inline-block;
    vertical-align: top;
    width: 45%;
    margin-right: 4.5%;
    margin-left:2.5%;
}
.minishow{
    width: 100%;
    text-align: center;
    margin-top: 6%;
}
.minishow p{
    width: 100%;
    text-align: center;
    padding-top: 20%;
    margin:0;
}
.minishow li{
    float: left;
    width: 150px;
    height: 150px;
    margin: 12px;
    list-style-type: none;
}
.minishow ul{
    display: block;
    max-width: 1080px;
    margin: 0 auto;
    background: white;
    height: 220px;
}
.contactform{
    width: 500px;
    position: relative;
    left: 0;
    right: 0;
    margin: 0 auto;
    text-align: center;
    z-index: 99999;
}
.map{
    border: 0;
    position: absolute;
    height: 102px;
    top: 300px;
    right: 65px;
    border: 10px solid white !important;
    border-radius: 10px;
}
.map:hover{
    z-index:1;
    height: 310px;
    -webkit-transition: all 300ms linear;
    -moz-transition: all 300ms linear;
    -ms-transition: all 300ms linear;
    -o-transition: all 300ms linear;
    transition: all 300ms linear;
}
.normalinputs{
    border: none;
    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.21);
    margin: 4px;
    padding: 6px 45px;
    border-radius: 5px;
    font-size: 14px;
    text-align: center;
}
.textboxinput{
    border: none;
    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.21);
    margin: 4px;
    padding: 20px 49px;
    border-radius: 5px;
    font-size: 14px;
    text-align: center;
}
.inputbutton{
    border: none;
    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.21);
    margin: 12px;
    padding: 6px 45px;
    border-radius: 5px;
    color: white;
    font-size: 14px;
    background: rgba(0, 0, 0, 0.76);
}
.infls{
    position: fixed;
    background: rgba(0, 0, 0, 0.7);
    z-index: 99999999;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display:none;
    opacity: 0;
    text-align: center;
}
.infls div{
    background: white;
    width: 50%;
    margin: 0 auto;
    margin-top: 13%;
    padding: 65px;
    border-radius: 17px;
    font-size: 13px;
}
.showinfl{
    display:initial;
    opacity: 1;
    -webkit-transition: all 300ms linear;
    -moz-transition: all 300ms linear;
    -ms-transition: all 300ms linear;
    -o-transition: all 300ms linear;
    transition: all 300ms linear;
}
@media (max-width: 800px ){
    .indexfirstview{
        background-position: 35%;
    }
    .indexfirstview img {
        width: 100%;
        padding-top: 210px;
    }
    .menunavtrigger{
        padding: 21px 0px;
        text-align: center !important;
        height: 40px;
        background: black;
        margin: 0;
        left: 0;
        right: 0;
        border: none;
        color: #fff;
        font-weight: bolder;
        text-transform: uppercase;
        font-family: 'Montserrat';
        font-size: 1.6em;
        display: block;
        border-bottom:3px solid white;
    }
    nav ul {
        margin: 0 auto;
        list-style-type: none;
        max-width: 860px;
        background: black;
        width:100%;
        padding:0;
    }
    nav ul li {
        padding-top: 10px;
        padding-bottom: 10px;
        margin:0;
        padding-left: 7px;
        border-top: 1px solid white;
        border-left:none;
        width:97%;
        float:none;
    }
    nav ul li a {
        font-size:23px;
    }
    #expand{
       height:0;
       overflow:hidden;
    }
    .navliesp{
        height:33px;
        width:97%;
    }
    .two{
        padding-left: 20%;
        border-right:none;
        width:300px;
    }
    .two:hover{
        background:none;
    }
    .submenul {
        width: 320px;
        margin-bottom: -9px;
        margin:0;
    }
    .navlisub{
        left:0;
        border-right: none;
        width:98px;
    }
    .indexfirstview h3{
        bottom: 125px;
    }
}
@media (min-width:1500px){
    .teamcontainer{
        max-width: 1200px;
        margin: 0 auto;
    }
}
/* ... */

